[project]
name = "liander-energy-data"
version = "0.1.0"
description = "Experimental helper script for Liander Open Energy Data analysis"
readme = "README.md"
authors = [
    {name = "Tony Xiang", email = "y.xiang@tue.nl"}
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "polars",
    "numpy",
    "plotly",
    "pyarrow",
    "ipykernel",
    "nbformat",
    "jupyter"
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]
